converted pep compilers to sep compilers

--- a/sep.css
+++ b/sep.css
@@ -5,7 +5,7 @@
 :version: $Revision$
 :copyright: This stylesheet has been placed in the public domain.
 
-Default cascading style sheet for the PEP HTML output of Docutils.
+Default cascading style sheet for the SEP HTML output of Docutils.
 */
 
 /* "! important" is used here to override other ``margin-top`` and
